--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "socket.io": "^4.6.0"
   },
+  "engines": {
+    "node": "18"
+  },
   "devDependencies": {
     "nodemon": "^2.0.7"
   }
